# ida_domain_mcp

./: .gitignore  ida_tools.py  main.py  pyproject.toml
src/ida_domain_mcp/: ida_tools.py  main.py
tests/: agent.py  test_get_metadata.py
tests/binaries/: a.out  a.out.id0  a.out.id1  a.out.id2  a.out.nam  a.out.til  crackme03.elf.id0  crackme03.elf.id1  crackme03.elf.nam  crackme03.elf.til
