[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ida-domain-mcp"
version = "0.1.0"
description = "MCP plugin for IDA Pro/IDA Free that uses ida-domain for database access"
authors = [
    {name = "Mimi", email = "stevenjoezhang@gmail.com"},
    {name = "xxyyue", email = "xxyyyue@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "ida-domain>=0.3.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]
